# secure-cli

./: .gitignore  Cargo.toml  Problem Statement.md  README.md  activity-plan.md  file.enc  file_decrypted.txt  secure_cli.wal  test-commands.md  test.py
doc/: crates.js  help.html  search-index.js  settings.html
doc/search.desc/secure_cli/: secure_cli-desc-0-.js
doc/secure_cli/: all.html  enum.EncryptionAlgorithm.html  fn.derive_key.html  fn.main.html  fn.recover_from_wal.html  fn.show_metadata.html  fn.write_wal_entry.html  index.html  sidebar-items.js  struct.Metadata.html  struct.WalEntry.html
doc/src/secure_cli/: main.rs.html
doc/trait.impl/core/fmt/: trait.Debug.js
doc/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/trait.impl/serde/de/: trait.Deserialize.js
doc/trait.impl/serde/ser/: trait.Serialize.js
src/: main.rs
